# PGPU

./: .gitignore  pyproject.toml  readme.md  todo.md
demos/pong/: main.py  main_scene.py  menu.py  menu_scene.py  pong_demo.py
src/: __init__.py
src/engine/: utils.py
src/engine/component/: components.py  scene.py  transform.py
src/engine/core/: application.py  camera.py  graphics.py  input.py  time.py  window.py
src/engine/extension/: file.py  math.py  random.py  render.py  system.py
src/pgpu/: __init__.py  utils.py
src/pgpu/component/: components.py  entities.py  scene.py  transform.py
src/pgpu/core/: application.py  audio.py  camera.py  graphics.py  input.py  physics.py  time.py  window.py
src/pgpu/extension/: color.py  file.py  mathf.py  pjson.py  pmath.py  rand.py  render.py  saving.py  system.py
tests/: demo.py  performance-test.py  random_demo.py  rigidbody-test.py  rigidbody_demo.py  test.py
